--- a/ManagementAPI/.gitignore
+++ b/ManagementAPI/.gitignore
@@ -1,2 +1,34 @@
 # Ignore arquivos de configuração de ambiente 
 .env
+
+
+## Build output
+bin/
+obj/
+
+## User-specific files
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+## Logs
+*.log
+
+## OS files
+.DS_Store
+Thumbs.db
+
+## Rider
+.idea/
+
+## Visual Studio Code
+.vscode/
+
+## NuGet
+*.nupkg
+*.snupkg
+.nuget/
+
+## Others
+*.db
