--- a/ManagementAPI/ManagementAPI.csproj
+++ b/ManagementAPI/ManagementAPI.csproj
@@ -15,7 +15,9 @@
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.11" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="8.1.2" />
+        <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="8.0.3" />
     </ItemGroup>
 
     <ItemGroup>
