--- a/ManagementAPI/ManagementAPI.csproj
+++ b/ManagementAPI/ManagementAPI.csproj
@@ -24,6 +24,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Compile Remove="Config\DbConfig.cs" />
       <Compile Remove="Context.cs" />
     </ItemGroup>
 
